// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/WorkpadFilters/FilterComponent default 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium css-m8bxcp-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed workpadFilter"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        kibana
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        Group 1
      </div>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with component field 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium css-m8bxcp-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed workpadFilter"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <div
          className="euiText css-1lo1kz-euiText-m"
        >
          <span
            className="css-1jxhab0-euiTextColor-success"
            style={Object {}}
          >
            <h3>
              kibana
            </h3>
          </span>
        </div>
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        Group 1
      </div>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots components/WorkpadFilters/FilterComponent with custom filter fields 1`] = `
<div
  className="euiPanel euiPanel--plain euiPanel--paddingMedium css-m8bxcp-euiPanel-m-m-plain"
>
  <dl
    className="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed workpadFilter"
  >
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Type
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        exactly
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Column
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        project
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Value
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        kibana
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Filter group
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        Group 1
      </div>
    </dd>
    <dt
      className="euiDescriptionList__title eui-textBreakWord"
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        <h4>
          Custom Field
        </h4>
      </div>
    </dt>
    <dd
      className="euiDescriptionList__description eui-textBreakWord"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        className="euiText css-1vkrgyt-euiText-s"
      >
        Some unknown field
      </div>
    </dd>
  </dl>
</div>
`;
